--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,8 @@
 <head>
    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?v=3&amp;"></script> 
    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.7/socket.io.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.min.js"></script>
+   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.min.js"></script>
 </head>
 <body>
   <div id='body'><h1>ERROR!</h1>
